--- a/app.json
+++ b/app.json
@@ -1,70 +1,26 @@
 {
-    "name": "VideoCompressor",
-    "description": "A stable and Fast telegram video convertor bot which can compress.",
-    "logo": "",
-    "keywords": [
-        "Best",
-        "telegram",
-        "compressor",
-        "bot"
-    ],
-    "repository": "https://github.com/ahmadalep/VideoConvertor",
-    "website": "",
-    "success_url": "https://t.me/VIDEO_CONVERT",
+    "name": "Simple Video Uploader",
+    "description": "Simple Video Uploader",
+    "repository": "https://github.com/prxpostern/prxvideoleecher002",
+    "success_url": "https://t.me/ali110ali",
+    "stack": "heroku-20",
     "env": {
-        "API_HASH": {
-            "description": "Your API HASH from my.telegram.org",
+        "BOT_TOKEN": {
+            "description": "Your bot token, as a string.",
             "value": ""
         },
         "API_ID": {
-            "description": "Your API ID from my.telegram.org",
+            "description": "Get this value from https://my.telegram.org",
             "value": ""
         },
-        "BOT_TOKEN": {
-            "description": "Bot token, get it from @BotFather.",
+        "API_HASH": {
+            "description": "Get this value from https://my.telegram.org",
             "value": ""
         },
         "AUTH_USERS": {
-            "description": "Bot owner's UserID.",
-            "value": ""
-        },
-        "HEROKU_API": {
-            "description": "Your heroku app name(optional, add only if you want to restart directly from tg.",
+            "description": "only these user id's can use the bot. separate with space",
             "value": "",
             "required": false
-        },
-        "HEROKU_APP_NAME": {
-            "description": "Your heroku api, you can get it from heroku account settings(optional, add only if you want to restart directly from tg.",
-            "value": "",
-            "required": false
-        },
-        "LOG_CHANNEL": {
-            "description": "Log channel username, without using '@'.",
-            "value": ""
-        },
-        "LOG_ID": {
-            "description": "Log channel `ID` (Should be Public)",
-            "value": ""
-        },
-        "ACCESS_CHANNEL": {
-            "description": "Private group id to spy users.(Should be public group)",
-            "value": ""
-        },
-        "MONGODB_URI": {
-            "description": "Your mongodb url here.",
-            "value": ""
-        },
-        "FORCESUB": {
-            "description": "Channel id to which u want user be force subcribed.(Should be public)",
-            "value": ""
-        },
-        "FORCESUB_UN": {
-            "description": "Forcesub channel's username.",
-            "value": ""
-        },
-        "BOT_UN": {
-            "description": "Username of your bot.",
-            "value": ""
         }
     },
     "buildpacks": [
@@ -72,7 +28,13 @@
             "url": "heroku/python"
         },
         {
-            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+            "url": "https://github.com/prxpostern/heroku-buildpack-ffmpeg-latest.git"
         }
-    ]
+    ],
+    "formation": {
+        "worker": {
+            "quantity": 1,
+            "size": "free"
+        }
+    }
 }
